--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arati  | Github</title> 
+    <style>
+        h1{ 
+            color: blueviolet;
+            background-color: black;
+            padding: 10px;
+        }
+    </style>
 </head>
 <body>
    <h1>welcome to sharanbasva university</h1> 
