added background color

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     </style>
 </head>
 <body>
+    background-color: pink;
+    text-align: center;
    <h1>welcome to sharanbasva university</h1> 
    <img src="image.png" alt="" width 100%>
    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis minima impedit illum dicta expedita aspernatur? Cum in, minima voluptates alias, dolorum officia reiciendis accusantium error praesentium perferendis labore ducimus nam.</p>
