--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
             background-color: black;
             padding: 10px;
         }
+        p{
+            background-color: blue;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
