--- a/about.html
+++ b/about.html
@@ -3,11 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Us</title>
+    <style>
+        body {
+            background-color: pink;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+        nav {
+            background: #222;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+        }
+        nav ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+        }
+        nav ul li {
+            margin: 0 20px;
+        }
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 1.1em;
+            padding: 18px 0;
+            display: block;
+            transition: color 0.2s;
+        }
+        nav ul li a:hover {
+            color: #ffb347;
+        }
+        h1 {
+            color: blueviolet;
+            background-color: black;
+            padding: 10px;
+        }
+        p {
+            background-color: blue;
+            color: #fff;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>this is about file</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+    <h1>About Us</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti nesciunt recusandae in dicta quia tempore aut fugit a repellat alias nostrum quibusdam maxime commodi inventore blanditiis accusantium repellendus, possimus unde.</p>
-    
 </body>
 </html>
