--- a/index.html
+++ b/index.html
@@ -5,6 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arati  | Github</title> 
     <style>
+        body {
+            background-color: pink;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+        nav {
+            background: #222;
+            padding: 0 0 0 0;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+        }
+        nav ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+        }
+        nav ul li {
+            margin: 0 20px;
+        }
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 1.1em;
+            padding: 18px 0;
+            display: block;
+            transition: color 0.2s;
+        }
+        nav ul li a:hover {
+            color: #ffb347;
+        }
         h1{ 
             color: blueviolet;
             background-color: black;
@@ -17,11 +49,15 @@
     </style>
 </head>
 <body>
-    background-color: pink;
-    text-align: center;
-   <h1>welcome to sharanbasva university</h1> 
-   <img src="image.png" alt="" width 100%>
-   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis minima impedit illum dicta expedita aspernatur? Cum in, minima voluptates alias, dolorum officia reiciendis accusantium error praesentium perferendis labore ducimus nam.</p>
-</p>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+    <h1>welcome to sharanbasva university</h1> 
+    <img src="image.png" alt="" width="100%">
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis minima impedit illum dicta expedita aspernatur? Cum in, minima voluptates alias, dolorum officia reiciendis accusantium error praesentium perferendis labore ducimus nam.</p>
 </body>
 </html>
